Wordle Board Column Draft

--- a/index.html
+++ b/index.html
@@ -2,12 +2,63 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <!-- <meta http-equiv="X-UA-Compatible" content="IE=edge"> -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="styles.css"/>
 </head>
 <body>
-    <h1> Wordle Clone </h1>
-    
+    <h1 class="heading"> Wordle Clone </h1>
+    <div class="container"> 
+        <div class="game">
+            <div class="border">
+                <div class="board">
+                <div>
+                    <div class="guess-boxes">1</div>
+                    <div class="guess-boxes">2</div>
+                    <div class="guess-boxes">3</div>
+                    <div class="guess-boxes">4</div>
+                    <div class="guess-boxes">5</div>
+                    <div class="guess-boxes">6</div>
+                </div>
+                <div>
+                    <div class="guess-boxes">1</div>
+                    <div class="guess-boxes">2</div>
+                    <div class="guess-boxes">3</div>
+                    <div class="guess-boxes">4</div>
+                    <div class="guess-boxes">5</div>
+                    <div class="guess-boxes">6</div>
+                </div>
+                <div>
+                    <div class="guess-boxes">1</div>
+                    <div class="guess-boxes">2</div>
+                    <div class="guess-boxes">3</div>
+                    <div class="guess-boxes">4</div>
+                    <div class="guess-boxes">5</div>
+                    <div class="guess-boxes">6</div>
+                </div>
+                <div>
+                    <div class="guess-boxes">1</div>
+                    <div class="guess-boxes">2</div>
+                    <div class="guess-boxes">3</div>
+                    <div class="guess-boxes">4</div>
+                    <div class="guess-boxes">5</div>
+                    <div class="guess-boxes">6</div>
+                </div>
+                <div>
+                    <div class="guess-boxes">1</div>
+                    <div class="guess-boxes">2</div>
+                    <div class="guess-boxes">3</div>
+                    <div class="guess-boxes">4</div>
+                    <div class="guess-boxes">5</div>
+                    <div class="guess-boxes">6</div>
+                </div>
+                </div>
+            </div>
+            <div class="keys">
+            </div>
+        </div>
+    </div>
+   
 </body>
 </html>
